<resources>
    <string name="app_name">CheckING</string>
    <string name="lbl_by">by GIBIO</string>
    <string name="lbl_props">CO2 \nSPO2 \nHeart Rate \nBody Temperature \nRoom Temperature</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_init_title">Monitoring App</string>
    <string name="lbl_init_desc">This App, developed by members of Grupo de Investigación y Desarrollo en Bioingeniería from UTN FRBA, monitors the measurement devices placed in the classrooms and common spaces of the University. These devices are capable of measuring temperature and carbon dioxide concentration in the environment and people\'s temperature, oxygen saturation and heart rate . The communication is based on MQTT protocol, the standard for IoT applications. To get started, enter your server details.</string>
    <string name="lbl_sett_desc">These are your current server properties:</string>
    <string name="lbl_edit">Edit server</string>
    <string name="lbl_send_message">Send Message</string>
    <string name="lbl_add_new_broker">Add New Broker</string>
    <string name="lbl_enter_port">Enter Port</string>
    <string name="lbl_port">Port</string>
    <string name="lbl_enter">Enter</string>
    <string name="lbl_remember">Remember me</string>
    <string name="lbl_enter_topic">Enter Topic</string>
    <string name="lbl_enter_address">Enter Address</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_add_broker">Add Broker</string>
    <string name="lbl_topic">Topic</string>
    <string name="lbl_msg">Message</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_test_message">Test message</string>
    <string name="lbl_test_topic">test_gibio/#</string>
    <string name="lbl_test_topic_send">test_gibio</string>
    <string name="lbl_test_address">test.mosquitto.org</string>
    <string name="lbl_test_port">1883</string>
    <string name="lbl_connected">Broker connected</string>
    <string name="lbl_sub_failed">Failed to subscribe</string>
    <string name="lbl_conn_lost">Connection lost</string>
    <string name="lbl_msg_sent">Message sent!</string>
    <string name="lbl_loading">Loading… Please wait</string>
    <string name="lbl_broker">Broker</string>
    <string name="lbl_logo_gibio">Logo GIBIO</string>
    <string name="lbl_logo_utn">Logo UTN</string>
    <string name="lbl_gibio">Grupo de Investigación y Desarrollo en Bioingeniería</string>
    <string name="lbl_monitoring">Monitoring</string>
    <string name="lbl_select">Select an option</string>
    <string name="lbl_room">Room</string>
    <string name="lbl_rooms">Rooms</string>
    <string name="lbl_people">People</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_conf">Configuration</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_communicate">Communicate</string>
    <string name="lbl_info">More information</string>
    <string name="lbl_bug">Debug Mode</string>
    <string name="lbl_nav_open">Navigation drawer opened</string>
    <string name="lbl_nav_closed">Navigation drawer closed</string>
    <string name="lbl_warning">Warning</string>
    <string name="lbl_warning_msg">Do you want to delete the current server and set a new one?</string>
    <string name="lbl_warning_cal">Do you want to delete all calibration data?</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_graph_amb">ROOM TEMPERATURE</string>
    <string name="lbl_graph_obj">SUBJECT TEMPERATURE</string>
    <string name="lbl_graph_hr">HEART RATE</string>
    <string name="lbl_subject">SUBJECT</string>
    <string name="lbl_graph_co2">CO2 LEVEL</string>
    <string name="lbl_graph_spo2">SPO2 LEVEL</string>
    <string name="lbl_temp_lower">Temperature</string>
    <string name="lbl_hr_lower">Heart Rate</string>
    <string name="lbl_co2_lower">CO2 Level</string>
    <string name="lbl_spo2_lower">SPO2 Level</string>
    <string name="lbl_graph_room_obj">%1$s - SUBJECT TEMPERATURE</string>
    <string name="lbl_graph_room_spo2">%1$s - SPO2 LEVEL</string>
    <string name="lbl_axis_samples">Samples[n]</string>
    <string name="lbl_axis_time">Time(s)</string>
    <string name="lbl_axis_temp">Temperature(°C)</string>
    <string name="lbl_axis_co2">Concentration (ppm)</string>
    <string name="lbl_axis_spo2">Concentration(%)</string>
    <string name="lbl_axis_hr">Beats per minute (bpm)</string>
    <string name="lbl_select_room">Select a Room:</string>
    <string name="lbl_select_person">Select a Person:</string>
    <string name="lbl_no_meas">There are no measurements yet…</string>
    <string name="lbl_last_meas">%1$s - Last measurement</string>
    <string name="lbl_last_desc">Value: %1$.2f%2$s - Time: %3$s</string>
    <string name="lbl_last_value">%1$.2f%2$s</string>
    <string name="lbl_last_time">Time: %1$s</string>
    <string name="lbl_history">See full history</string>
    <string name="lbl_calibrate_title">Calibration menu</string>
    <string name="lbl_calibrate">Calibrate</string>
    <string name="lbl_correlation">See correlation diagrams</string>
    <string name="lbl_save_meas">Save measurement</string>
    <string name="lbl_value">Value</string>
    <string name="lbl_no_corr">There is no correlation data yet…</string>
    <string name="lbl_corr">Correlation</string>
    <string name="lbl_real_values">Real values</string>
    <string name="lbl_real_values_graph">Real values (%1$s)</string>
    <string name="lbl_meas_values">Measured values</string>
    <string name="lbl_meas_values_graph">Measured values (%1$s)</string>
    <string name="lbl_meas_value">Measured value</string>
    <string name="lbl_cal_values">Calibrated values</string>
    <string name="lbl_tamb_received">Room temperature received!</string>
    <string name="lbl_tobj_received">Subject temperature received!</string>
    <string name="lbl_co2_received">CO2 level received!</string>
    <string name="lbl_spo2_received">SPO2 level received!</string>
    <string name="lbl_hr_received">Heart rate received!</string>
    <string name="lbl_value_received">Value: %1$.2f%2$s</string>
    <string name="err_value">Not valid value received</string>
    <string name="err_field">This field cannot be empty</string>
    <string name="err_broker">There is no broker</string>
    <string name="err_connect">Can\'t connect to the broker</string>
    <string name="err_send">There was a problem</string>
    <color name="blue_elec">#1B74C4</color>
    <color name="yellow">#FFD700</color>
    <color name="green_lime">#32CD32</color>
    <color name="green_sea">#3CB371</color>
    <color name="red">#DC143C</color>
    <string name="hello_blank_fragment">ACA PONER GRAFICOS</string>
</resources>