<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/lbl_home" />
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/room_icon"
            android:title="@string/lbl_room" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/thermometer_person_icon"
            android:title="@string/lbl_people" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/lbl_map" />
    </group>

    <item android:title="@string/lbl_conf">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_icon"
                android:title="@string/lbl_settings" />
        </menu>
    </item>

    <item android:title="@string/lbl_communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/info_icon"
                    android:title="@string/lbl_info" />
                <item
                    android:id="@+id/nav_bug"
                    android:icon="@drawable/bug_icon"
                    android:title="@string/lbl_bug" />
            </group>
        </menu>
    </item>
</menu>