<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_enter_address" />
    <EditText
        android:id="@+id/etAddress"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/tvPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_enter_port" />
    <EditText
        android:id="@+id/etPort"
        android:inputType="number"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_enter_topic" />
    <EditText
        android:id="@+id/etTopic"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/btnAdd"
        android:text="@string/lbl_add_broker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>