<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:text="@string/lbl_settings"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/lbl_sett_desc"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:fontFamily="@font/poppins"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lbl_address" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/language"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins"
                android:inputType="none"
                android:focusable="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lbl_port" />

            <EditText
                android:id="@+id/etPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/dialpad"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins"
                android:inputType="none"
                android:focusable="false"
                android:maxLength="4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lbl_topic" />

            <EditText
                android:id="@+id/etTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/topic"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins"
                android:inputType="none"
                android:focusable="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:cardCornerRadius="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/lbl_edit"
            android:textColor="@color/white"
            android:background="@color/cardview_dark_background"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>