<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgGIBIO"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/gibio_logo"
        app:layout_constraintBottom_toTopOf="@+id/imgUTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/lbl_logo_gibio" />
    <TextView
        android:text="@string/lbl_gibio"
        android:paddingTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toBottomOf="@id/imgGIBIO"/>

    <ImageView
        android:id="@+id/imgUTN"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:baselineAlignBottom="true"
        android:contentDescription="@string/lbl_logo_utn"
        android:src="@drawable/utnba_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>