<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
            <ImageView
                android:src="@drawable/gibio_logo"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_gravity="center"/>
            <ImageView
                android:src="@drawable/plus"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp" />
            <ImageView
                android:src="@drawable/mqtt_logo"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/lbl_init_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingVertical="10dp"
                android:text="@string/lbl_init_desc"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/lbl_address" />

                    <EditText
                        android:id="@+id/etAddressInit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/language"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/lbl_port" />

                    <EditText
                        android:id="@+id/etPortInit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/dialpad"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins"
                        android:inputType="number"
                        android:maxLength="4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/lbl_topic" />

                    <EditText
                        android:id="@+id/etTopicInit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/topic"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/poppins"
                        android:inputType="text" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:checked="true"
                    android:text="@string/lbl_remember"
                    android:fontFamily="@font/poppins_light"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <RelativeLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/black">

                    <TextView
                        android:id="@+id/btnEnter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/lbl_enter"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>